# GazeMorph

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: large.json  medium.json  small.json
notebooks/: ETRA_GazeMorph-Ablations.ipynb  ETRA_analysis.ipynb
scripts/: download_artifacts.py  smoke_test.py
src/gazemorph/: __init__.py  checkpoint.py  data.py  losses.py  model.py  train.py  utils.py
